# ChangeLog for sys-block/gparted
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/gparted/ChangeLog,v 1.116 2012/05/03 04:46:47 jdhore Exp $

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> gparted-0.11.0.ebuild,
  gparted-0.12.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  29 Apr 2012; Markus Meier <maekke@gentoo.org> gparted-0.12.0.ebuild:
  x86 stable, bug #410611

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> gparted-0.12.0.ebuild:
  Stable for AMD64, wrt bug #222222

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> gparted-0.12.0.ebuild:
  Stable for amd64, wrt bug #410611

  15 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> gparted-0.11.0.ebuild,
  gparted-0.12.0.ebuild:
  Remove obsolete ntfsprogs from USE="ntfs" and force ntfs-3g.

  15 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> -gparted-0.9.1.ebuild,
  -gparted-0.10.0.ebuild:
  old

  15 Mar 2012; Jeff Horelick <jdhore@gentoo.org> gparted-0.11.0.ebuild:
  marked x86 per bug 404857

  08 Mar 2012; Markos Chandras <hwoarang@gentoo.org> gparted-0.11.0.ebuild:
  Stable on amd64 wrt bug #404857

*gparted-0.12.0 (07 Mar 2012)

  07 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +gparted-0.12.0.ebuild:
  Version bump.

  14 Jan 2012; Markus Meier <maekke@gentoo.org> gparted-0.10.0.ebuild:
  x86 stable, bug #393007

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> gparted-0.10.0.ebuild:
  amd64 stable, bug 393007

*gparted-0.11.0 (16 Dec 2011)

  16 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +gparted-0.11.0.ebuild:
  Version bump.

*gparted-0.10.0 (05 Nov 2011)

  05 Nov 2011; Samuli Suominen <ssuominen@gentoo.org> +gparted-0.10.0.ebuild:
  Version bump.

  22 Oct 2011; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml:
  Add flag description for gtk, bug #387353.

  15 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -gparted-0.8.0.ebuild:
  old

  15 Oct 2011; Markus Meier <maekke@gentoo.org> gparted-0.9.1.ebuild: