@@ -1,6 +1,18 @@
-DIST gparted-0.11.0.tar.bz2 1661266 RMD160 798b11ae1bf2d1779ff0bee4b04c4256cedfc072 SHA1 9288eb02c9c49f7c62141d16d18e006d6d9a7800 SHA256 eee28bc8d169e50f39f244d4524801c3aaf76e0cbe34bdc856d033d61f25dcb4
-DIST gparted-0.12.0.tar.bz2 1715113 RMD160 45edfdeaf95377625d32d8d50767882aac07cc13 SHA1 6f6068c4c8ca8e0dd13073a3a4c6d93e9c1cb110 SHA256 2c2f4ac580f322abf5b028092a4316792e3f18ef4de4785c9d97fc9ad12d6a6d
-EBUILD gparted-0.11.0.ebuild 2048 RMD160 55c5fd270a5357c2329dfa6f4a0fc7b74ac919ba SHA1 44c6f8584edfb33ecbdbd9b01a510ab83b608d39 SHA256 d1b024cd7be2fdee8de1ef2697331b438a1e3b1d638b746193366ea93144a90c
-EBUILD gparted-0.12.0.ebuild 2042 RMD160 5d6882276325abad3f4793901bd02b4f38d69b3c SHA1 0104ea74d84cfde48d1d5191dfc37324f99b203c SHA256 76e254be52f7426bf83a505220c15011f750a007dcc90dc1d5111148aea098db
-MISC ChangeLog 16052 RMD160 10b573b03060e62a512510d11cf9f4f7a09c2e75 SHA1 bdd33f8d619dcbc878a737d019d61340fee008b4 SHA256 3cc458bde0e505c905eda90fa3a0c286c5e1be35a799b2cf22143c84ba6b1e1b
-MISC metadata.xml 1489 RMD160 2155ecd115ec06f67cc5ce21185436c21e9ae6b2 SHA1 d70e8436a493185e49feacf903c27e349557be71 SHA256 923195e65741cba1d64c5a3322a13caf19ae95ed1ba28defcf90ee17eeae524f
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST gparted-0.11.0.tar.bz2 1661266 SHA256 eee28bc8d169e50f39f244d4524801c3aaf76e0cbe34bdc856d033d61f25dcb4
+DIST gparted-0.12.0.tar.bz2 1715113 SHA256 2c2f4ac580f322abf5b028092a4316792e3f18ef4de4785c9d97fc9ad12d6a6d SHA512 24721a116912f2d9601c4e5221b76059bb980a6db27d8dcd00c1102ae2b66ebf562670c9a443cc0ab846cbecd5c25da859f442f60977efd7cc6e3de8fff64415 WHIRLPOOL 716baa03ffde677390c2f46dc144a595c3c08c57e566334453f7a3a4338eab774332b4377ec3b6c5488776f1d3d6aaa770019ea7abb935c3937f71e2f1c5fac1
+DIST gparted-0.13.1.tar.bz2 1808005 SHA256 67c3830c26bc8ce4386e62a4a8e347c21dbefe3d5362b9b6a320e36df23d5272 SHA512 a0a6af764f5be094ba88057ceb10cd0ed9204fbedd6b8d25fae8e35cb0fec347f90fb0b2054f6d41dd3fc362fafa7a03beedb96b602a1b9c6ac32d060768da9d WHIRLPOOL 348ce2304c3213e1e022749240e1e44ac303b234e9496275cc7e544264e8ce6e5ac76bcee99d316d10bd9ac8411f442170aa417af95c0462d70d2797470e0b97
+EBUILD gparted-0.11.0.ebuild 2048 SHA256 d1b024cd7be2fdee8de1ef2697331b438a1e3b1d638b746193366ea93144a90c SHA512 3a00e4355ebfbcc1854cc11671e6b5cdbc4c987c85bcca0633e950a4937f9166c5addd733269ddcc4bfbd102b881fce172680490b541bf72c6150b568dc0f8db WHIRLPOOL 9a20db3d95259c1023ba106765853da814d92022b0aee14dbe39a0f913ea2f008c380c3fa95a14faee2c3f56f5b26e28d4b982406a189b116e10a6852ad0dd8d
+EBUILD gparted-0.12.0.ebuild 2042 SHA256 76e254be52f7426bf83a505220c15011f750a007dcc90dc1d5111148aea098db SHA512 a2996711be87b0cdbc9cef376e4b49e3a6743b53d15bfb9bf26aca07c000ae81881d40a68bdbf25b704dee770b31a583fb6a1488be65a7d5ba21ebc42f45c3fc WHIRLPOOL 39ced1368b60b88efd4f1f3a45373a8bcca3ed95831bc1772cc6d9533ac60c155314d9dcf12c334e7bb408d27f9f2a030d5e3fb3eeed1a3af6b233c301580c94
+EBUILD gparted-0.13.1.ebuild 2056 SHA256 84f5a2c87aed925a26fc3b0c77bc2bc9ecc39df57f1311dcce5c407061ede015 SHA512 470486b426f6a7a92ed54c96f15419265870434bdebef0fb39b6d63f10297972148f05ece215a44022d9c12830025f8fd95389847c5e49a371b5765918d431a8 WHIRLPOOL 6c0c77ad0abde10633ce4c5548881292a13b83070d433bbabac6a410c99f90dfa23fcc55d7ed9d038aa4e72a529a6da938ad8794eca6d86fda76391017d8d643
+MISC ChangeLog 16188 SHA256 0cc97fd80dc360aaa733ee899082d9dc0a3057e8f61ce91ed2fa13b66f136521 SHA512 89a7a483a0cd79f76ce0b6d1792b24263ed95fd3d7d2fe829373c64be52255e1d7dacdcdfdd5517bacc950969bf4fef322624d2f7f519f97d57d8a2d772d8cc2 WHIRLPOOL ef6cc88742d5fd521b9d7aa6fdfd6bb10fbc85bdf5c53156af3d78ce1a30737d0ac7f6c371fee1ca0a0a4ec27ad517a8938a445c79fbb8dfbff0af77bc7c4d7e
+MISC metadata.xml 1489 SHA256 923195e65741cba1d64c5a3322a13caf19ae95ed1ba28defcf90ee17eeae524f SHA512 fc71fef54e4e4712f0e9c0c81593413a6aab466af083e709d8fc236810050d3ae31446c2fa216b95635cbb1a4edd3e81d59f8658fa917be0e50d04cee7487b03 WHIRLPOOL 12ae4b2dedee049ed89a5ee0c549c039ab47e1c5299936d113a96f0df412164a1f3f0e3fe94b20894cfa84074ebd9fbf57d51d9b01ae6f068639f5cc15237288
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBAjhUACgkQ1fmVwcYIWAbrsACgonUwIpB52o+TQCaEhCfI7o8P
+fRAAn1pJnJtp+bSU/xGJt6D7eNhkXUwS
+=5F1H
+-----END PGP SIGNATURE-----
